Bug 435322 - Near-constant KWin crashes on X11
Summary: Near-constant KWin crashes on X11
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: general (other bugs)
Version First Reported In: git master
Platform: Other Linux
: NOR crash
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
: 435374 (view as bug list)
Depends on:
Blocks:
 
Reported: 2021-04-03 19:16 UTC by Nate Graham
Modified: 2021-04-06 17:40 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
New crash information added by DrKonqi (6.03 KB, text/plain)
2021-04-05 10:14 UTC, Bart
Details
New crash information added by DrKonqi (7.19 KB, text/plain)
2021-04-05 10:46 UTC, Bart
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Nate Graham 2021-04-03 19:16:32 UTC
After building KWin from source today (latest commit is dcdca9be6a3c2da2e52124ac79cb16afcc4dbb84) after not having done so since Thursday April 1st, I'm not getting nearly constant crashes on X11, with the following backtrace:

#0  raise (sig=<optimized out>) at ../sysdeps/unix/sysv/linux/raise.c:49
#1  0x00007fdf40922530 in <signal handler called> () at /lib64/libc.so.6
#2  KWin::Item::height() const (this=this@entry=0x0) at /home/nate/kde/src/kwin/src/item.cpp:77
#3  0x00007fdf43e3aede in KWin::Item::size() const (this=0x0)
    at /home/nate/kde/src/kwin/src/item.cpp:180
#4  0x00007fdf43e3af09 in KWin::Item::rect() const (this=<optimized out>)
    at /home/nate/kde/src/kwin/src/item.cpp:208
#5  0x00007fdf43ebffbf in KWin::Unmanaged::initialize() (this=0x7fff4df60ee8)
    at /home/nate/kde/src/kwin/src/unmanaged.cpp:80
#6  0x00007fdf411408f2 in QtPrivate::QSlotObjectBase::call(QObject*, void**)
    (a=0x7fff4df60f20, r=<optimized out>, this=<optimized out>)
    at ../../include/QtCore/../../src/corelib/kernel/qobjectdefs_impl.h:398
#7  QSingleShotTimer::timerEvent(QTimerEvent*) (this=0x7fdf38006e30) at kernel/qtimer.cpp:320
#8  0x00007fdf4113228f in QObject::event(QEvent*) (this=0x7fdf38006e30, e=0x7fff4df61080)
    at kernel/qobject.cpp:1336
#9  0x00007fdf424084ff in QApplicationPrivate::notify_helper(QObject*, QEvent*)
    (this=<optimized out>, receiver=0x7fdf38006e30, e=0x7fff4df61080)
    at kernel/qapplication.cpp:3632
#10 0x00007fdf4110632a in QCoreApplication::notifyInternal2(QObject*, QEvent*)
    (receiver=0x7fdf38006e30, event=0x7fff4df61080) at kernel/qcoreapplication.cpp:1063
#11 0x00007fdf4115cc83 in QTimerInfoList::activateTimers() (this=this@entry=0x11ba638)
    at kernel/qtimerinfo_unix.cpp:643
#12 0x00007fdf4115a3bc in QEventDispatcherUNIXPrivate::activateTimers() (this=this@entry=0x11ba5b0)
    at kernel/qeventdispatcher_unix.cpp:249
#13 0x00007fdf4115b117 in QEventDispatcherUNIX::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) (this=<optimized out>, flags=...) at kernel/qeventdispatcher_unix.cpp:516
#14 0x00007fdf3ca4834e in QXcbUnixEventDispatcher::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) (this=0x12a5cf0, flags=...) at qxcbeventdispatcher.cpp:60
#15 0x00007fdf41104ceb in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>)
    (this=this@entry=0x7fff4df61220, flags=..., flags@entry=...)
    at ../../include/QtCore/../../src/corelib/global/qflags.h:69
#16 0x00007fdf4110cf60 in QCoreApplication::exec() ()
    at ../../include/QtCore/../../src/corelib/global/qflags.h:121
#17 0x0000000000407f46 in main(int, char**) (argc=<optimized out>, argv=0x7fff4df614b8)
    at /home/nate/kde/src/kwin/src/main_x11.cpp:479


Have not tried Wayland yet, will do so soon.
Comment 1 Bart 2021-04-05 10:14:38 UTC
Created attachment 137342 [details]
New crash information added by DrKonqi

kwin_x11 (5.21.80) using Qt 5.15.2

- What I was doing when the application crashed:

Kwin crashes on start, completely unusable.
This after latest unstable updates.
worked fine last week.

-- Backtrace (Reduced):
#4  0x00007f56f7cfc254 in KWin::Item::height() const () at /usr/lib/x86_64-linux-gnu/libkwin.so.5
#5  0x00007f56f7cfc2e2 in KWin::Item::size() const () at /usr/lib/x86_64-linux-gnu/libkwin.so.5
#6  0x00007f56f7cfc30d in KWin::Item::rect() const () at /usr/lib/x86_64-linux-gnu/libkwin.so.5
#7  0x00007f56f7d9e583 in KWin::Unmanaged::initialize() () at /usr/lib/x86_64-linux-gnu/libkwin.so.5
#8  0x00007f56f68b82c6 in QtPrivate::QSlotObjectBase::call(QObject*, void**) (a=0x7ffffb4cca30, r=<optimized out>, this=<optimized out>) at ../../include/QtCore/../../src/corelib/kernel/qobjectdefs_impl.h:398
Comment 2 Bart 2021-04-05 10:37:22 UTC
fyi: no crashes on wayland
Comment 3 Bart 2021-04-05 10:46:22 UTC
Created attachment 137343 [details]
New crash information added by DrKonqi

kwin_x11 (5.21.80) using Qt 5.15.2

- What I was doing when the application crashed:

this is with backtrace added. (wasn't able to do that previous time :p )

-- Backtrace (Reduced):
#4  KWin::Item::height() const (this=this@entry=0x0) at ./src/item.cpp:77
#5  0x00007fcf4576f2e2 in KWin::Item::size() const (this=0x0) at ./src/item.cpp:180
#6  0x00007fcf4576f30d in KWin::Item::rect() const (this=<optimized out>) at ./src/item.cpp:208
#7  0x00007fcf45811583 in KWin::Unmanaged::initialize() (this=<optimized out>) at ./src/unmanaged.cpp:80
#8  0x00007fcf4432b2c6 in QtPrivate::QSlotObjectBase::call(QObject*, void**) (a=0x7ffe0e374210, r=<optimized out>, this=<optimized out>) at ../../include/QtCore/../../src/corelib/kernel/qobjectdefs_impl.h:398
Comment 4 David Edmundson 2021-04-05 11:51:44 UTC
*** Bug 435374 has been marked as a duplicate of this bug. ***
Comment 5 Bug Janitor Service 2021-04-05 11:58:21 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/827
Comment 6 David Edmundson 2021-04-05 13:33:37 UTC
Git commit c53b2fa3c58fc74f54c713323547fbb967fb90ab by David Edmundson.
Committed on 05/04/2021 at 11:56.
Pushed by ngraham into branch 'master'.

Fix crash in Unmanaged without compositing

Without compositing we don't have surfaceItems

M  +3    -1    src/unmanaged.cpp

https://invent.kde.org/plasma/kwin/commit/c53b2fa3c58fc74f54c713323547fbb967fb90ab
Comment 7 Bart 2021-04-06 17:40:33 UTC
alos resolved over here.
Comment 8 Bart 2021-04-06 17:40:45 UTC
also*