Fix crash in Unmanaged without compositing

Without compositing we don't have surfaceItems

BUG: 435322